[gd_scene load_steps=9 format=2]

[ext_resource path="res://Game/GUI/TextLeft.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/breakfastVariations.png" type="Texture" id=2]
[ext_resource path="res://Game/Scripts/Functional.gd" type="Script" id=3]
[ext_resource path="res://Fonts/BigelowRules-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.288677, 0.383871, 0.509664, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0754099, 0.168925, 0.292499, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.14902, 0.258824, 0.403922, 1 )

[node name="Functional" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="CG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="TextLeft" parent="." instance=ExtResource( 1 )]

[node name="MainMenuButton" type="Button" parent="."]
margin_left = 673.0
margin_top = 837.0
margin_right = 962.0
margin_bottom = 975.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Main Menu"

[connection signal="pressed" from="TextLeft/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_MainMenuButton_pressed"]

[editable path="TextLeft"]
